Without using JFXTrayIcon rather using simple AWT/Swing to implement this! The code is get from here: https://gist.github.com/jewelsea/e231e89e8d36ef4e5d8a