@@ -11,13 +11,12 @@ echo Running native-image
 call native-image ^
 --no-fallback ^
 --verbose ^
+--enable-url-protocols=http ^
 --enable-preview ^
 --add-modules java.net.http ^
 --add-opens java.net.http/java.net.http=ALL-UNNAMED ^
 --add-opens java.base/java.net=ALL-UNNAMED ^
 --module-path "%T%\SimpleOTP-1.0.jar;%T%\modules" ^
---add-modules javafx.controls,javafx.graphics,javafx.base ^
---initialize-at-run-time=sun.java2d.cmm.ProfileDeferralInfo ^
 --module SimpleOTP/com.simtechdata.Main ^
 -H:+UnlockExperimentalVMOptions ^
 -H:+ReportExceptionStackTraces ^
@@ -28,10 +27,7 @@ call native-image ^
 -H:SerializationConfigurationFiles="%G%\serialization-config.json" ^
 -H:GenerateDebugInfo=1 ^
 -H:DebugInfoSourceSearchPath="%T%\src" ^
--H:+IncludeAllTimeZones ^
---initialize-at-build-time=java.awt,javax.swing ^
--H:Name="%T%\SimpleOTP" ^
--Djava.awt.headless=true
+-H:Name="%T%\SimpleOTP"
 
 REM Copy the resulting executable to the target directory
 xcopy /Y "%T%\SimpleOTP.exe" .
